# kapsel

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ascii.txt  ote-config.example.config
.github/workflows/: build.yml  release.yml
Metrics/: Kapsel-Metrics-Dry-Run.md
docs/: agent-integration.md  architecture.md  layers.md  mcp.md  publishing.md  release.md  security.md
include/ote/: api.hpp  app.hpp  config.hpp  json.hpp  layers.hpp  mcp.hpp  mcp_client.hpp  platform.hpp  runtime.hpp  secrets.hpp  terminal.hpp
src/: api.cpp  app.cpp  config.cpp  json.cpp  layers.cpp  main.cpp  mcp.cpp  mcp_client.cpp  platform.cpp  runtime.cpp  secret.cpp  terminal.cpp
